--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6466693972405450"
+     crossorigin="anonymous"></script>
     <meta charset="utf-8" />
     <link rel="icon" href="https://res.cloudinary.com/dejvlvhlp/image/upload/v1682612257/logooriginal_4_aefmay.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      name="Crossfit"
+      content="GYM plan, diet plan, community, market"
     />
+    <meta name="keywords" content="diet plan, gym plan, market, health, healthifyMe, cultfit, dream 11, AI , chatgpt , fitbot, crossfit" />
+
     <link rel="apple-touch-icon" href="https://res.cloudinary.com/dejvlvhlp/image/upload/v1682612257/logooriginal_4_aefmay.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
